templates/nxrm-ha-azure_template.yaml
---
# Source: nxrm-ha-azure/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusrepo
---
# Source: nxrm-ha-azure/templates/nxrm-logback-tasklogfile-override.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nxrm-ha-azure-61.0.3.release-name-logback-tasklogfile-override
  namespace: nexusrepo
data:
  logback-tasklogfile-appender-override.xml: |
    <included>
      <appender name="tasklogfile" class="ch.qos.logback.core.rolling.RollingFileAppender">
        <File>${karaf.data}/log/tasks/allTasks.log</File>
        <filter class="org.sonatype.nexus.pax.logging.TaskLogsFilter" />
        <Append>true</Append>
        <encoder class="org.sonatype.nexus.pax.logging.NexusLayoutEncoder">
          <pattern>%d{"yyyy-MM-dd HH:mm:ss,SSSZ"} %-5p [%thread] %node %mdc{userId:-*SYSTEM} %c - %m%n</pattern>
        </encoder>
        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
          <fileNamePattern>${karaf.data}/log/tasks/allTasks-%d{yyyy-MM-dd}.log.gz</fileNamePattern>
          <maxHistory>1</maxHistory>
        </rollingPolicy>
      </appender>
    </included>
---
# Source: nxrm-ha-azure/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nxrm-ha-azure-service
  namespace: nexusrepo
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
# Source: nxrm-ha-azure/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nxrm-ha-azure-61-0-3-release-name-nxrm-statefulset
  namespace: nexusrepo
  labels:
    app: nxrm
spec:
  replicas: 
  serviceName: "nxrm-ha-azure-61-0-3-release-name-nxrm-statefulset"
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      initContainers:
        # chown nexus-data to 'nexus' user and init log directories/files for a new pod
        # otherwise the side car containers will crash a couple of times and backoff whilst waiting
        # for nxrm-app to start and this increases the total start up time.
        - name: chown-nexusdata-owner-to-nexus-and-init-log-dir
          image: busybox:1.33.1
          command: [/bin/sh]
          args:
            - -c
            - >-
              mkdir -p /nexus-data/etc/logback &&
              mkdir -p /nexus-data/log/tasks &&
              mkdir -p /nexus-data/log/audit &&
              touch -a /nexus-data/log/tasks/allTasks.log &&
              touch -a /nexus-data/log/audit/audit.log &&
              touch -a /nexus-data/log/request.log &&
              chown -R '200:200' /nexus-data
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            
            limits:
              cpu: "0.2"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 256Mi
      terminationGracePeriodSeconds: 20
      containers:
        - name: nxrm-app
          image: sonatype/nexus3:3.58.1
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            
            limits:
              cpu: 4
              memory: 8Gi
            requests:
              cpu: 4
              memory: 8Gi
          env:
            - name: DB_NAME
              value: "nexus"
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-password
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-user
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  name: nxrm-db-secret
                  key: db-host
            - name: NEXUS_SECURITY_INITIAL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: nxrm-admin-secret
                  key: nexus-admin-password
            - name: NEXUS_SECURITY_RANDOMPASSWORD
              value: "false"
            - name: INSTALL4J_ADD_VM_PARAMS
              value: "-Xms2703m -Xmx2703m -Dnexus.licenseFile=/nxrm-secrets/nxrm-license.lic \
          -Dnexus.datastore.clustered.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:3306/${DB_NAME}?sslmode=require \
          -Dnexus.datastore.nexus.username=${DB_USER} \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD} \
          -Dnexus.blobstore.provisionDefaults=false"
          volumeMounts:
            - mountPath: /nxrm-secrets
              name: nxrm-secrets
            - name: nexus-data
              mountPath: /nexus-data
            - name: logback-tasklogfile-override
              mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
              subPath: logback-tasklogfile-appender-override.xml
        - name: request-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            
            limits:
              cpu: "0.2"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 256Mi
        - name: audit-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            
            limits:
              cpu: "0.2"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 256Mi
        - name: tasks-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
          resources:
            
            limits:
              cpu: "0.2"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 256Mi
      volumes:
        - name: nxrm-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: nxrm-ha-azure-61.0.3.release-name-secret
              fsType: ext4
        - name: logback-tasklogfile-override
          configMap:
            name: nxrm-ha-azure-61.0.3.release-name-logback-tasklogfile-override
            items:
              - key: logback-tasklogfile-appender-override.xml
                path: logback-tasklogfile-appender-override.xml
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "managed-csi"
        resources:
          requests:
            storage: 100Gi
---
# Source: nxrm-ha-azure/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexusrepo
  name: nxrm-ha-azure-61.0.3.release-name-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nxrm-ha-azure-service
                port:
                  number: 80
---
# Source: nxrm-ha-azure/templates/secret.yaml
apiVersion: secrets-store.csi.x-k8s.io/v1
kind: SecretProviderClass
metadata:
  namespace: nexusrepo
  name: nxrm-ha-azure-61.0.3.release-name-secret
spec:
  provider: azure
  secretObjects:
  - data:
    - key: db-user
      objectName: nxrm-db-user
    - key: db-password
      objectName: nxrm-db-password
    - key: db-host
      objectName: nxrm-db-host
    secretName: nxrm-db-secret
    type: Opaque
  - data:
    - key: nexus-admin-password
      objectName: nxrm-admin-password
    secretName: nxrm-admin-secret
    type: Opaque
  parameters:
    keyvaultName: keyvaultname
    useVMManagedIdentity: "true"
    userAssignedIdentityID: userAssignedIdentityID
    objects: |
      array:
        - |
          objectName: nxrm-license.lic
          objectType: secret
          objectEncoding: base64
        - |
          objectName: nxrm-db-password
          objectType: secret
        - |
          objectName: nxrm-db-user
          objectType: secret
        - |
          objectName: nxrm-db-host
          objectType: secret
        - |
          objectName: nxrm-admin-password
          objectType: secret

    tenantId: tenantId
